refactor(system): remediate module architecture debt